--- a/views/_headerhome.ejs
+++ b/views/_headerhome.ejs
@@ -5,48 +5,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <link rel="stylesheet" href="/path/to/iconic/iconic.min.css">
 
-        nav{
-            align-items: center;
-        }
-      ul{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        margin: 30px auto;
-        align-items: center;
-      }
-      ul li{
-        list-style-type: none;
-      }
-      ul li a{
-        color: white;
-        text-transform: uppercase;
-      }
-      ul li a:hover{
-        color: grey;
-        font-style: italic;
-        height: 50px;
-        border-radius: 5px;
-      }
+    <style>
+      header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+body{
+  margin: 0;
+  padding:0;
+
+}
+.logo,
+.contact {
+  display: flex;
+  align-items: center;
+}
+
+.logo h1 {
+  margin-left: 10px;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  margin-right: 20px;
+
+}
+nav ul li a{
+  color: black;
+  font-size: 20px;
+}
+
+nav ul li:last-child {
+  margin-right: 0;
+}
+.contact {
+  width: 20%;
+}
+.contact button {
+  margin-left: 20px;
+  color: white;
+        background-color: black;
+        width: 100%;
+        padding:20px;
+}
       .logo{
-        width: 10%;
-        
+        width: 20%;
+        border-radius: 10px;
+        display: flex;
+        gap: 40px;
       }
+
+      .logo h1{
+        font-size: 30px;
+        width: 100%;
+        font-weight: 900;
+      }
+     
+      
     </style>
 </head>
+<body>
+  <header>
+    <div class="logo">
 
-        <nav>
-            <ul>
-                <img src="/images/house.png" alt="" class="logo">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About us</a></li>
-                <li><a href="/services">Our Services</a></li>
-                <li><a href="/login">Login</a></li>
-                <li><a href="/signup">signup</a></li>
-            </ul>
-        </nav>
+      <img src="/images/house.png" alt="logo">
+
+      <h1 style="color: black;">Ulinzi Rentals</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/services">Services</a></li>
+        <li><a href="/about"></a></li>
+        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/login">Login</a></li>
+      </ul>
+    </nav>
+
+    <div class="contact">
+      <a href="/facebook"><i class="icon-facebook"></i></a>
+      <a href="/instagram"><i class="icon-instagram"></i></a>
+      <a href="/login"><button type="submit">Get Started</button></a>
+    </div>
+
+  </header>
+  
+
+</body>
+               
 
 
 </html>
