--- a/views/landlord/manage_properties.ejs
+++ b/views/landlord/manage_properties.ejs
@@ -121,6 +121,33 @@ button{
   width: 10%;
   background-color: lawngreen;
 }
+@media screen and (max-width: 600px) {
+ .aside {
+    display: none;
+  }
+ .container {
+    margin: 0;
+    padding: 20px;
+  }
+ .property-search form {
+    flex-direction: column;
+  }
+ .property-search label {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+ .property-list table {
+    width: 100%;
+  }
+ .property-list th,
+ .property-list td {
+    padding: 12px;
+  }
+ .modal-content {
+    width: 100%;
+  }
+}
+
   </style>
 </head>
 <body>
