--- a/views/landlord/dashboard1.ejs
+++ b/views/landlord/dashboard1.ejs
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landlord</title>
   <link rel="stylesheet" href="/stylesheet/dashboardl.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
   
 </head>
 <body>
@@ -14,7 +16,10 @@
     <div class="aside">
       <%- include("_sidebar.ejs") %>
     </div>
-   
+   <div class="menu">
+    <span><i class="fa fa-bars" aria-hidden="true"></i></span>
+    <span></span>
+   </div>
     <div class="container">
       <div class="more">
 <section class="summary">
