--- a/views/tenant/_tenantsidebar.ejs
+++ b/views/tenant/_tenantsidebar.ejs
@@ -32,7 +32,7 @@
 <style>
   .sidebar{
     height: 100vh;
-    position:fixed;
+    width:100%;
   }
   ul li{
     gap: 30px;
@@ -49,7 +49,6 @@
     background-color: grey;
     padding: 20px;
     border-radius: 8px;
-    transform: scale(1);
     color: rgba(104, 0, 0, 0.736);
   }
 </style>
