--- a/views/landlord/dashboard1.ejs
+++ b/views/landlord/dashboard1.ejs
@@ -23,7 +23,8 @@
     <div class="container">
       <div class="more">
 <section class="summary">
-        <h2>Overview</h2>
+        
+        <h2>Hello there Welcome </h2>
         <p><b>Properties:</b></p> <!-- property count -->
         <p><b>Overdue Rents:</b></p><!-- overdue rents --> 
         <p><b>Vacancy Rate:</b> </p><!-- vacancyrate and vacancy[logic to calculate rate}] -->
